# MutationvIP

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
data/cosmic/: cosmic_sbs_etiologies.tsv
hg38/: get_files.md  kmer_counts_3N.csv  kmer_counts_5N.csv
notebooks/: chr_zoom.ipynb  diff_pathogenicity.ipynb  fig1-2.ipynb  fig2-3.ipynb  fig3_cosmic_signatures.ipynb  fig4.ipynb  fig4_cosmic_signatures.ipynb  table2.ipynb
notebooks/utils/: constants.py  load_data.py  utils.py
outputs/: README.md
outputs/cosmic/: README.md
outputs/datasets/: README.md
outputs/diff_pathogenicity/: README.md
outputs/experimental/: README.md
rawdata/: get_files.md
scripts/: download_and_preprocess_experimental.sh  generate_experimental.py  get_kmer_count.sh  liftover_bw.py  merge_big_wig.py
zenodo/: files_description.md
