[project]
name = "paper"
version = "0.1.0"
description = "This repository contains the code to generate the figures and results from the paper Linking somatic mutations in cancer to the electronic properties of DNA (https://www.biorxiv.org/content/10.64898/2026.01.02.697387v1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "viper",
]

[tool.uv.sources]
viper = { git = "https://github.com/Benoitdw/vIPer.git" }
